force-app/main/default/objects/Activity/fields/Is_Automatically_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Automatically_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automatically Created</label>
    <type>Checkbox</type>
</CustomField>