force-app/main/default/objects/Activity/fields/Profiling_date__c.field-meta.xml
<CustomField>
    <fullName>Profiling_date__c</fullName>
    <label>Profiling date</label>
    <type>Date</type>
</CustomField>